# zeroex

./: CMakeLists.txt  CMakeSettings.json  README.md
app/: main.cpp
include/camera/: camera.h
include/render/: Render.h  app.h  baseObject.h  callBack.h  eventsHandler.h  graphicObject.h  window.h
include/shaderSystem/: shaders.h
shaders/: rectangle.frag  rectangle.vs
src/render/: Render.cpp  window.cpp
src/shaderSystem/: shaders.cpp
